# request-optim

./: .gitignore  README.md  cli.py  devcontainer.Dockerfile  main.py  optim.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: tests.yml
src/: demo.py  main.py
src/optimizer/: optim.py
tests/: test_optim.py
